--- a/12-websockets/02-socketio/public/style.css
+++ b/12-websockets/02-socketio/public/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .container {
-  width: 800px;
+  /* max-width: 800px; */
   padding-left: 30px;
   padding-right: 30px;
   margin-left: auto;
@@ -56,7 +56,7 @@ body {
 .headerWrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-self: center;
 }
 
 .title {
